tests/enums/faulty_case_no_else.sy
f :: fn a do
    case a do
        X do
            out += "X"
        end
        Y x do
            out += "Y"
            x <=> 2
        end
    end
end

// error: @10
